--- a/src/page/loginPage/LoginPage.css
+++ b/src/page/loginPage/LoginPage.css
@@ -1,13 +1,18 @@
 .find {
-    float: right;
-    padding-right: 10px;
-    height: 15px;
-    line-height: 15px;
+  float: right;
+  padding-right: 10px;
+  height: 15px;
+  line-height: 15px;
 }
 
 .find a {
-    color: #444444;
-    font-size: 13px;
+  color: #444444;
+  font-size: 13px;
+}
+
+.login-box {
+  padding-top: 30%;
+  padding-bottom: 30%;
 }
 
 label.autologin {
