--- a/src/page/freeBoardPage/FreeWritePage.css
+++ b/src/page/freeBoardPage/FreeWritePage.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: hwb(227 41% 7%);
+  background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
   /* margin-left: 90%; */
