--- a/src/page/freeBoardPage/FreeCommentPage.css
+++ b/src/page/freeBoardPage/FreeCommentPage.css
@@ -12,7 +12,7 @@
 }
 
 .comment-button {
-  background-color: hwb(227 41% 7%);
+  background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
   margin-left: 90%;
