--- a/src/page/lectureBoardPage/LectureWritePage.css
+++ b/src/page/lectureBoardPage/LectureWritePage.css
@@ -1,5 +1,5 @@
 .lec-button {
-  background-color: hwb(227 41% 7%);
+  background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 5px;
   margin-right: 3px;
