--- a/src/page/messagePage/MessagePage.css
+++ b/src/page/messagePage/MessagePage.css
@@ -12,7 +12,7 @@
 
 .message-button {
   margin: 2px;
-  background-color: hwb(227 41% 7%);
+  background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
 }
