--- a/src/page/secretBoardPage/SecretListPage.css
+++ b/src/page/secretBoardPage/SecretListPage.css
@@ -6,7 +6,7 @@
 }
 
 .write-button {
-  background-color: hwb(227 41% 7%);
+  background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
 }
