--- a/src/page/signupPage/SignUpPage.css
+++ b/src/page/signupPage/SignUpPage.css
@@ -105,3 +105,7 @@ button, input[type=email], input[type=number], input[type=password], input[type=
     font-weight: normal;
     font-size: 10px;
 }
+
+.text{
+    padding-top: 10px;
+  }
