--- a/src/page/secretBoardPage/SecretListPage.css
+++ b/src/page/secretBoardPage/SecretListPage.css
@@ -6,11 +6,13 @@
 }
 
 .write-button {
+  margin: 2px;
   background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
   border-width: 0px;
   border-radius: 3px;
 }
 
 .write-button:hover {
-  color: #ffffff;
+  background-color: hwb(227 65% 17%);
 }
