--- a/src/page/chatbotPage/ChatBotPage.css
+++ b/src/page/chatbotPage/ChatBotPage.css
@@ -64,10 +64,11 @@
 .chat-button {
   margin: 2px;
   background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
   border-width: 0px;
   border-radius: 3px;
 }
 
 .chat-button:hover {
-  color: #ffffff;
+  background-color: hwb(227 65% 17%);
 }
