--- a/src/page/freeBoardPage/FreeWritePage.css
+++ b/src/page/freeBoardPage/FreeWritePage.css
@@ -1,12 +1,13 @@
 .button {
+  margin: 2px;
   background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
   border-width: 0px;
   border-radius: 3px;
-  /* margin-left: 90%; */
 }
 
 .button:hover {
-  color: #ffffff;
+  background-color: hwb(227 65% 17%);
 }
 
 .back {
