--- a/src/page/myPage/MyPage.css
+++ b/src/page/myPage/MyPage.css
@@ -8,3 +8,15 @@
   width: 80px;
   height: 60px;
 }
+
+.logout-button {
+  background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
+  border-width: 0px;
+  border-radius: 3px;
+  margin-left: 93%;
+}
+
+.logout-button:hover {
+  background-color: hwb(227 65% 17%);
+}
