--- a/src/page/mainPage/MainPage.css
+++ b/src/page/mainPage/MainPage.css
@@ -7,12 +7,93 @@
   width: 100px;
   height: 100px;
 }
+.left {
+  position: absolute;
+  left: 25px;
+  top: 0;
+  width: 200px;
+  height: 300px;
+}
+
+.image-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.container {
+  display: flex;
+}
+
+/* .txt {
+  font-size: 10px;
+  align-items: center;
+  padding-left: 10px;
+}
+.txt2 {
+  font-size: 10px;
+  align-items: center;
+  padding-left: 60px;
+}
+.txt3 {
+  font-size: 10px;
+  align-items: center;
+  padding-left: 70px;
+}
+.txt4 {
+  font-size: 10px;
+  align-items: center;
+  padding-left: 55px;
+}
+.txt5 {
+  font-size: 10px;
+  align-items: center;
+  padding-left: 85px;
+} */
 
 .sangsangs {
   padding-left: 90px;
   padding-right: 60px;
   width: 100%;
   height: 500px;
+}
+
+.MainSangSang {
+  width: 100px;
+  height: 100px;
+}
+
+.mainsang {
+  width: 100px;
+  height: 100px;
+}
+
+.sangsang2 {
+  width: 70px;
+  height: 100px;
+}
+
+.sangsang {
+  width: 100px;
+  height: 90px;
+}
+
+.heartsang {
+  width: 120px;
+  height: 120px;
+}
+
+.service {
+  text-align: center;
+}
+.navy {
+  color: hsl(242, 78%, 23%);
+}
+
+.info {
+  font-size: 10px;
+  color: grey;
+  text-align: center;
 }
 
 @media only screen and (min-width: 991px) {
@@ -187,11 +268,6 @@ aside > div.login {
   box-sizing: border-box;
   background-color: #fff;
 }
-
-/* aside > div.login > a.logo {
-  display: block;
-  text-align: center;
-} */
 
 aside > div.login > a.button.login {
   border: 1px solid #e3e3e3;
