--- a/src/page/mainPage/MainPage.css
+++ b/src/page/mainPage/MainPage.css
@@ -54,7 +54,7 @@
 .sangsangs {
   padding-left: 90px;
   padding-right: 60px;
-  width: 100%;
+  width: 95%;
   height: 500px;
 }
 
@@ -81,6 +81,13 @@
 .heartsang {
   width: 120px;
   height: 120px;
+  margin-top: -10px;
+}
+
+.my-info {
+  text-align: center;
+  color: grey;
+  font-size: 14px;
 }
 
 .service {
