전체적인 css 수정

--- a/src/page/timeTable/TimeTable.css
+++ b/src/page/timeTable/TimeTable.css
@@ -24,18 +24,22 @@ h1 {
   background-color: #fff;
 }
 
-/* .save-btn {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  font-weight: bold;
-  border: none;
-  color: #fff;
-  background-color: #4caf50;
-  cursor: pointer;
-  transition: 0.3s;
+.table-button {
+  margin: 2px;
+  background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
+  border-width: 0px;
+  border-radius: 3px;
+  margin-left: 75%;
 }
 
-.save-btn:hover {
-  background-color: #3e8e41;
-} */
+.table-button:hover {
+  background-color: hwb(227 65% 17%);
+}
+
+.table-all {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
