--- a/src/page/messagePage/MessagePage.css
+++ b/src/page/messagePage/MessagePage.css
@@ -1,13 +1,12 @@
 .message-input {
   padding: 10px;
-  margin: 2px;
-  flex: 1;
+  margin: 4px;
   font-size: 16px;
   border: none;
   outline: none;
   border: 1px solid black;
   border-radius: 3px;
-  width: 90%;
+  width: 95%;
 }
 
 .message-button {
@@ -15,6 +14,7 @@
   background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
+  margin-left: 95%;
 }
 
 .message-button:hover {
