--- a/src/page/messagePage/MessagePage.css
+++ b/src/page/messagePage/MessagePage.css
@@ -2,15 +2,13 @@
   padding: 10px;
   margin: 4px;
   font-size: 16px;
-  border: none;
   outline: none;
-  border: 1px solid black;
+  border: 1px solid hsl(0, 0%, 35%);
   border-radius: 3px;
-  width: 95%;
+  width: 100%;
 }
 
 .message-button {
-  margin: 2px;
   background-color: hsl(227, 49%, 31%);
   border-width: 0px;
   border-radius: 3px;
