--- a/src/page/messagePage/MessagePage.css
+++ b/src/page/messagePage/MessagePage.css
@@ -3,20 +3,20 @@
   margin: 4px;
   font-size: 16px;
   outline: none;
-  border: 1px solid hsl(0, 0%, 35%);
+  border: 1px solid;
   border-radius: 3px;
   width: 100%;
 }
 
 .message-button {
-  background-color: hsl(227, 49%, 31%);
+  color: navy;
   border-width: 0px;
   border-radius: 3px;
-  margin-left: 95%;
+  margin-left: 97%;
 }
 
 .message-button:hover {
-  color: #ffffff;
+  color: hsl(258, 51%, 78%);
 }
 
 .message-page {
