--- a/src/page/freeBoardPage/Comment/FreeCommentPage.css
+++ b/src/page/freeBoardPage/Comment/FreeCommentPage.css
@@ -1,5 +1,4 @@
 .comment-input {
-  padding: 10px;
   margin: 2px;
   flex: 1;
   font-size: 14px;
@@ -7,21 +6,20 @@
   outline: none;
   border: 1px solid rgb(141, 141, 141);
   border-radius: 3px;
-  width: 100%;
+  width: 800%;
   height: 35px;
 }
-.comment-button {
-  background-color: hsl(227, 49%, 31%);
-  color: #ffffff;
-  border-width: 0px;
-  border-radius: 3px;
-  margin-left: 94%;
+.comment-icon {
+  margin-left: 98%;
 }
 
-.comment-button:hover {
-  background-color: hwb(227 65% 17%);
+.comment-icon:hover {
+  color: #5e50c7;
 }
 
+.icon:hover {
+  color: #5e50c7;
+}
 .comment-box {
   padding: 3px;
 }
