--- a/src/Card.css
+++ b/src/Card.css
@@ -1,6 +1,8 @@
 .card {
-  border-radius: 12px;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  border-style: initial;
+  border: none;
+  border-color: rgb(255, 255, 255);
+  box-shadow: none;
 
   padding: 3px;
   margin: 2rem auto;
