--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,5 +1,5 @@
 .color-nav {
-  background-color: hwb(242 12% 55%);
+  background-color: hwb(240 18% 61%);
 }
 
 .image {
@@ -8,5 +8,5 @@
 }
 
 .white {
-  color: white;
+  color: rgb(205, 205, 205);
 }
