--- a/src/page/secretBoardPage/Board/SecretWritePage.css
+++ b/src/page/secretBoardPage/Board/SecretWritePage.css
@@ -1,20 +1,36 @@
 .button {
+  margin: 2px;
   background-color: hsl(227, 49%, 31%);
+  color: #ffffff;
   border-width: 0px;
   border-radius: 3px;
-  /* margin-left: 90%; */
 }
 
 .button:hover {
-  color: #ffffff;
+  background-color: hwb(227 65% 17%);
 }
 
 .back {
   padding: 10px;
 }
 
+.post-time {
+  font-size: 13px;
+}
+
 .comment {
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  padding: 3px;
+}
+
+.black {
+  color: black;
+}
+
+.heart-icon-container {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.big-grey {
+  color: hsl(0, 0%, 42%);
 }
