--- a/src/page/secretBoardPage/Comment/SecretCommentPage.css
+++ b/src/page/secretBoardPage/Comment/SecretCommentPage.css
@@ -1,29 +1,21 @@
+.comment-checkbox {
+  margin-right: 5px;
+}
+
+.comment-label {
+  margin-right: 10px;
+}
+
+.comment-input-wrapper {
+  display: flex;
+}
+
 .comment-input {
-  padding: 10px;
-  margin: 2px;
-  flex: 1;
-  font-size: 14px;
-  border: none;
-  outline: none;
-  border: 1px solid rgb(141, 141, 141);
-  border-radius: 3px;
-  width: 100%;
-  height: 35px;
-}
-.comment-button {
-  background-color: hsl(227, 49%, 31%);
-  color: #ffffff;
-  border-width: 0px;
-  border-radius: 3px;
-  margin-left: 94%;
+  margin-right: 5px;
 }
 
-.comment-button:hover {
-  background-color: hwb(227 65% 17%);
-}
-
-.comment-box {
-  padding: 3px;
+.icon:hover {
+  color: #5e50c7;
 }
 
 .comment-time {
@@ -33,5 +25,37 @@
 
 .no-comment {
   font-size: 15px;
-  color: grey;
+  color: rgb(203, 196, 196);
 }
+
+.comment-box {
+  font-size: 14px;
+  /* margin: 2px; */
+}
+
+/* .reply-input {
+  margin-right: 5px;
+  font-size: 15px;
+}
+
+.reply-comment {
+  font-size: 15px;
+  color: hwb(0 28% 72%);
+}
+
+.reply-input {
+  margin-right: 5px;
+  font-size: 15px;
+}
+
+.reply-checkbox {
+  margin-right: 5px;
+}
+
+.reply-label {
+  margin-right: 10px;
+}
+
+.reply-input-wrapper {
+  display: flex;
+} */
