--- a/src/page/timeTable/TimeTable.css
+++ b/src/page/timeTable/TimeTable.css
@@ -1,4 +1,4 @@
-.time-table {
+/* .time-table {
   border-collapse: collapse;
   width: 100%;
   max-width: 800px;
@@ -38,4 +38,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+} */
