--- a/src/page/mainPage/MainPage.css
+++ b/src/page/mainPage/MainPage.css
@@ -2,6 +2,11 @@
   padding-left: 82px;
 }
 
+.every-logo {
+  width: 80px;
+  height: 80px;
+}
+
 .logo-image {
   text-align: center;
   width: 100px;
@@ -465,4 +470,15 @@ section.footer > ul.links > li.privacy > a {
 
 .new-button:hover {
   background-color: #8c90b9;
+}
+
+@media screen and (max-width: 800px) {
+  .image-container {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .image-text-container {
+    margin: 10px;
+  }
 }
