--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -33,10 +33,10 @@
   }
 }
 
-.logo,
+/* .logo,
 .nav-link {
   animation: fadeIn 1.5s ease-in-out;
-}
+} */
 
 @media (max-width: 767px) {
   .nav-link {
